--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -29,7 +29,6 @@
     </footer>
 
     <script src="app.js"></script>
-    <script src="Perguntas.js">
-
+    <script src="Perguntas.js"></script> <!-- Corrigido: fechamento da tag -->
 </body>
 </html>
