--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="aap.js"></script>
     <script src="Perguntas.js"></script>
 
 </body>
